added tailwind and handlebars

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subscriber Tinder</title>
+
+    <link href="../../public/css/styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to subscriber tinder, thanks for joining!</h1>
-    <a href="/api/auth/google"><button>Sign in</button></a>
+    <p class="bg-purple-700">asdasfd</p>
+    {{{ body }}}
 </body>
 </html>
